[gd_scene load_steps=3 format=3 uid="uid://dcmsqvgdmru53"]

[ext_resource type="Script" path="res://main/setting_menu.gd" id="1_nydge"]
[ext_resource type="FontFile" uid="uid://cmnxp73v72n38" path="res://font/MathTimeRegular-MwXw.ttf" id="2_s8kga"]

[node name="setting menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nydge")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -33.0
offset_right = 65.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fullscreen_switch" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s8kga")
theme_override_font_sizes/font_size = 30
text = "Fullscreen"

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s8kga")
theme_override_font_sizes/font_size = 30
text = "Return"

[connection signal="toggled" from="VBoxContainer/Fullscreen_switch" to="." method="_on_fullscreen_switch_toggled"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
